test/e2e/standalone_conformance/basicrouting_gateway_with_route/testdata/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kgateway-standalone-conformance
