test/e2e/standalone_conformance/basicrouting_gateway_with_route/testdata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-svc
  namespace: kgateway-standalone-conformance
spec:
  selector:
    app.kubernetes.io/name: example-svc
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-svc
  namespace: kgateway-standalone-conformance
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: example-svc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: example-svc
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: example-svc
          image: registry.k8s.io/gateway-api/echo-basic:v1.5.0@sha256:fcbdfab85b3c4441e2fe8fdedd382904332ccb8253a5d51f6006c16903e7ae40
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: example-svc
